--- a/index.html
+++ b/index.html
@@ -4,25 +4,56 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>X Band</title>
+    <title>Funk The Revolution</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous"> 
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/538794ec36.js" crossorigin="anonymous"></script>
-    
-<!-- LINK BELOW COMMENTED OUT
+    <link href="https://fonts.googleapis.com/css2?family=Lato&family=Roboto&display=swap" rel="stylesheet">
 
-    <link href="https://fonts.googleapis.com/css?family=Bellota+Text:400,700&display=swap" rel="stylesheet"> 
     
--->
     <link rel="stylesheet" href="css/style.css" type="text/css">
 
 </head>
 
 <body>
 
+<!---------------------- HEADER  ---------------------->
+
+<section class="header">
+<div class="navigation-bar">
+ <ul>
+  <li><a href="#">Home</a></li>
+  <li><a href="#">Tour</a></li>
+  <li><a href="#">News</a></li>
+ </ul>
+</div> 
+ </section>
+
+<!---------------------- BAND NAME+INFO -- DIRECTLY BELOW HEADER  ---------------------->
+
+<section class="band-name">
+
+<h1>Funk The Revolution!</h1>
 
 
+</section>
+
+
+
+<!---------------------- MIDDLE / HERO-image SECTION  ---------------------->
+<section class="hero-image-container">
+<div class="hero-image">
+</div>
+
+</section>
+
+
+<!---------------------- FOOTER SECTION  ---------------------->
+<section class="footer">
+<h2>SOCIALS</h2>
+
+</section>
 
 
 </body>
