--- a/index.html
+++ b/index.html
@@ -22,22 +22,54 @@
 
 <section class="header">
 <div class="navigation-bar">
- <ul>
-  <li><a href="#">Home</a></li>
-  <li><a href="#">Tour</a></li>
-  <li><a href="#">News</a></li>
- </ul>
+
+<!-- Navbar code below copied from Bootstrap - https://getbootstrap.com/docs/4.0/components/navbar/ -->
+
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav mx-auto" id="navigation-links">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Tour</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">News</a>
+      </li>
+    </ul>
+  </div>
+</nav>
+<!-- End of copied code-->
+
 </div> 
  </section>
 
 <!---------------------- BAND NAME+INFO -- DIRECTLY BELOW HEADER  ---------------------->
-
+<hr>
 <section class="band-name">
 
-<h1>Funk The Revolution!</h1>
+<!-- Code below copied from https://codepen.io/GeoffreyCrofte/pen/Hizkh 
+(with slight amendments made to fit and work on current page) -->
 
+<div class="part">
+  <h3>Funk The Revolution</h3>
+    <div class="diamond">
+      <div class="dia">
+        <img src="../images/musician-playing-guitar.jpg" alt="Guitar-image" width="320" height="350"/>
+      </div>
+    </div>
+</div>
 
 </section>
+
+<!-- End of copied code-->
+
+
+
 
 
 
@@ -45,6 +77,7 @@
 <section class="hero-image-container">
 <div class="hero-image">
 </div>
+
 
 </section>
 
