added tour.html and news.html page/changed hero-image to cover full index.html page

--- a/tour.html
+++ b/tour.html
@@ -20,24 +20,21 @@
 
 <!---------------------- HEADER  ---------------------->
 
-<section class="header hero-image-container">
-
+<section class="header">
 <div class="navigation-bar">
-
-<div class="hero-image">
 
 <!-- Navbar code below copied from Bootstrap - https://getbootstrap.com/docs/4.0/components/navbar/ -->
 
- <nav class="navbar navbar-expand-lg">
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav mx-auto" id="navigation-links">
-      <li class="nav-item active">
+      <li class="nav-item">
         <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item active">
         <a class="nav-link" href="#">Tour</a>
       </li>
       <li class="nav-item">
@@ -45,38 +42,25 @@
       </li>
     </ul>
   </div>
-</nav> 
+</nav>
 <!-- End of copied code-->
+<hr>
 
+<!-- ---------------------------------- BAND NAME+INFO SECTION ------------------- -->
 
-<h3>Funk The Revolution</h3>
+<section class="band-name">
+
+<!-- Code below copied from https://codepen.io/GeoffreyCrofte/pen/Hizkh 
+(with slight amendments made to fit and work on current page) -->
+
+<div class="part">
+    <div class="diamond">
+      <div class="dia">
+        <img src="../images/musician-playing-guitar.jpg" alt="Guitar-image" width="320" height="350"/>
+      </div>
+    </div>
 </div>
 
-
-</div>
 </section>
 
-
-
-
-<!---------------------- MIDDLE / HERO-image SECTION  ---------------------->
-<!-- <section class="hero-image-container">
-
-<h3>Funk The Revolution</h3>
-
-<div class="hero-image"></div>
-
-
-</section>
--->
-
-
-<!---------------------- FOOTER SECTION  ---------------------->
-<section class="footer">
-<h2>SOCIALS</h2>
-
-</section>
-
-
-</body>
-</html>
+<!-- End of copied code-->
