--- a/news.html
+++ b/news.html
@@ -20,63 +20,28 @@
 
 <!---------------------- HEADER  ---------------------->
 
-<section class="header hero-image-container">
-
+<section class="header">
 <div class="navigation-bar">
-
-<div class="hero-image">
 
 <!-- Navbar code below copied from Bootstrap - https://getbootstrap.com/docs/4.0/components/navbar/ -->
 
- <nav class="navbar navbar-expand-lg">
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav mx-auto" id="navigation-links">
-      <li class="nav-item active">
+      <li class="nav-item">
         <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Tour</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item active">
         <a class="nav-link" href="#">News</a>
       </li>
     </ul>
   </div>
-</nav> 
+</nav>
 <!-- End of copied code-->
-
-
-<h3>Funk The Revolution</h3>
-</div>
-
-
-</div>
-</section>
-
-
-
-
-<!---------------------- MIDDLE / HERO-image SECTION  ---------------------->
-<!-- <section class="hero-image-container">
-
-<h3>Funk The Revolution</h3>
-
-<div class="hero-image"></div>
-
-
-</section>
--->
-
-
-<!---------------------- FOOTER SECTION  ---------------------->
-<section class="footer">
-<h2>SOCIALS</h2>
-
-</section>
-
-
-</body>
-</html>
+<hr>
