Added footer with social media links to each page

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous"> 
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-    <script src="https://kit.fontawesome.com/538794ec36.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Lato&family=Roboto&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/538794ec36.js" crossorigin="anonymous"></script>
 
     
     <link rel="stylesheet" href="css/style.css" type="text/css">
@@ -18,7 +18,7 @@
 
 <body>
 
-<!---------------------- HEADER  ---------------------->
+<!---------------------- HEADER + HERO IMAGE  ---------------------->
 
 <section class="header hero-image-container">
 
@@ -59,21 +59,23 @@
 
 
 
-<!---------------------- MIDDLE / HERO-image SECTION  ---------------------->
-<!-- <section class="hero-image-container">
-
-<h3>Funk The Revolution</h3>
-
-<div class="hero-image"></div>
+<!---------------------- QUOTES SECTION  ---------------------->
 
 
-</section>
--->
+
 
 
 <!---------------------- FOOTER SECTION  ---------------------->
 <section class="footer">
-<h2>SOCIALS</h2>
+<div class="social-media-links">
+  <ul>
+   <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-youtube"></i></a></li>
+   <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-spotify"></i></a></li>
+   <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-instagram"></i></a></li>
+   <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook"></i></a></li>
+   <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-twitter"></i></a></li>
+  </ul>
+</div>
 
 </section>
 
