--- a/news.html
+++ b/news.html
@@ -21,27 +21,50 @@
 <!---------------------- HEADER  ---------------------->
 
 <section class="header">
+
 <div class="navigation-bar">
 
 <!-- Navbar code below copied from Bootstrap - https://getbootstrap.com/docs/4.0/components/navbar/ -->
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+ <nav class="navbar navbar-expand-lg">
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav mx-auto" id="navigation-links">
-      <li class="nav-item">
+      <li class="nav-item active">
         <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Tour</a>
       </li>
-      <li class="nav-item active">
+      <li class="nav-item">
         <a class="nav-link" href="#">News</a>
       </li>
     </ul>
-  </div>
-</nav>
+</div>
+</nav>     
+</div>
+</section>
+
+
 <!-- End of copied code-->
 <hr>
+
+<!---------------------- FOOTER SECTION  ---------------------->
+<section class="footer">
+<div class="social-media-links">
+  <ul>
+   <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-youtube"></i></a></li>
+   <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-spotify"></i></a></li>
+   <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-instagram"></i></a></li>
+   <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook"></i></a></li>
+   <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-twitter"></i></a></li>
+  </ul>
+</div>
+
+</section>
+
+
+</body>
+</html>
