--- a/index.html
+++ b/index.html
@@ -26,59 +26,71 @@
 
 <div class="hero-image">
 
-<!-- Navbar code below copied from Bootstrap - https://getbootstrap.com/docs/4.0/components/navbar/ -->
+<!-- Navbar code below copied from Bootstrap - https://getbootstrap.com/docs/4.0/components/navbar/ 
+ (Excluding band name + social links)-->
 
- <nav class="navbar navbar-expand-lg">
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav mx-auto" id="navigation-links">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Tour</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">News</a>
-      </li>
-    </ul>
+<div class="pos-f-t footer">
+  <nav class="navbar navbar-dark bg-dark">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+ 
+   <h3>Funk The Revolution</h3>
+
+    <!-- <i> tags copied from fontawesome -->
+
+   <ul>
+    <li><a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a></li>
+    <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook"></i></a></li>
+    <li><a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter"></i></a></li>
+    <li><a href="https://www.youtube.com" target="_blank"><i class="fab fa-youtube"></i></a></li>
+    <li><a href="https://www.spotify.com/uk/" target="_blank"><i class="fab fa-spotify"></i></a></li>
+   </ul>
+
+</nav>
+  <div class="collapse" id="navbarToggleExternalContent">
+    <div class="bg-dark p-4">
+      <h4 class="text-white">Collapsed content</h4>
+    </div>
   </div>
-</nav> 
-<!-- End of copied code-->
-
-
-<h3>Funk The Revolution</h3>
 </div>
+    <!-- End of copied code -->
 
 
-</div>
-</section>
 
 
 
 
 <!---------------------- QUOTES SECTION  ---------------------->
 
-
-
-
-
-<!---------------------- FOOTER SECTION  ---------------------->
-<section class="footer">
-<div class="social-media-links">
-  <ul>
-   <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-youtube"></i></a></li>
-   <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-spotify"></i></a></li>
-   <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-instagram"></i></a></li>
-   <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook"></i></a></li>
-   <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-twitter"></i></a></li>
-  </ul>
+<div id="quotes">
+ <blockquote class="index-page-quotes">
+     <p><i class="fas fa-quote-left"></i>  
+     Went to see their gig at Went to see their gig at Went to see their gig at
+     Went to see their gig atWent to see their gig atWent to see their gig at
+      <i class="fas fa-quote-right"></i>
+     </p>
+ </blockquote>
+ <footer>- Jim Jimson, September 2019</footer>
 </div>
+</div>
+
+</div>
+
+
+
 
 </section>
 
+
+
+
+   <!--------------Bootstrap scripts -copied from 'Whiskey Drop' project
+    (originally from Bootstrap)   ---->
+
+<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 
 </body>
 </html>
