--- a/tour.html
+++ b/tour.html
@@ -74,11 +74,11 @@
 <section class="footer">
 <div class="social-media-links">
   <ul>
-   <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-youtube"></i></a></li>
-   <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-spotify"></i></a></li>
-   <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-instagram"></i></a></li>
+   <li><a href="https://www.youtube.com" target="_blank"><i class="fab fa-youtube"></i></a></li>
+   <li><a href="https://www.spotify.com/uk/" target="_blank"><i class="fab fa-spotify"></i></a></li>
+   <li><a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a></li>
    <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook"></i></a></li>
-   <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-twitter"></i></a></li>
+   <li><a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter"></i></a></li>
   </ul>
 </div>
 
