added tour dates below hero image

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
  
-   <h3>Funk The Revolution</h3>
+   <h3>The Revolution Funk</h3>
 
     <!-- <i> tags copied from fontawesome -->
 
@@ -50,7 +50,12 @@
 </nav>
   <div class="collapse" id="navbarToggleExternalContent">
     <div class="bg-dark p-4">
-      <h4 class="text-white">Collapsed content</h4>
+    <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Gallery</a></li>
+        <li><a href="#">News</a></li>
+        <li><a href="#">Tour</a></li>
+      </ul>
     </div>
   </div>
 </div>
@@ -62,6 +67,7 @@
 
 
 <!---------------------- QUOTES SECTION  ---------------------->
+<!---------------------- (potentially to be removed?)  
 
 <div id="quotes">
  <blockquote class="index-page-quotes">
@@ -72,15 +78,95 @@
      </p>
  </blockquote>
  <footer>- Jim Jimson, September 2019</footer>
-</div>
-</div>
+</div>---------------------->
 
 </div>
-
-
-
-
+</div>
 </section>
+
+<!---------------------- Tour Section  ---------------------->
+
+<div class="tour">
+<h2>Tour dates</h2>
+<hr></div>
+
+<!-- Contained code copied from Bootstrap: https://getbootstrap.com/docs/4.0/layout/grid/ -->
+
+<div class="container">
+  <div class="row">
+    <div class="col">
+      20th March, 2021
+    </div>
+    <div class="col-6">
+    Motorpoint Arena, Nottingham
+    </div>
+    <div class="col">
+      <a href="https://www.ticketmaster.co.uk/" target="_blank" class="ticket">Ticket</a>
+    </div>
+  </div>
+</div>
+
+
+<div class="container">
+  <div class="row">
+    <div class="col">
+      27th March, 2021
+    </div>
+    <div class="col-6">
+    The Eden Project, Cornwall
+    </div>
+    <div class="col">
+      <a href="https://www.ticketmaster.co.uk/" target="_blank" class="ticket">Ticket</a>
+    </div>
+   </div>
+</div>
+
+<div class="container">
+  <div class="row">
+    <div class="col">
+      02nd April, 2021
+    </div>
+    <div class="col-6">
+    Concorde 2, Brighton
+    </div>
+    <div class="col">
+      <a href="https://www.ticketmaster.co.uk/" target="_blank" class="ticket">Ticket</a>
+    </div>
+  </div>    
+</div>
+
+
+<div class="container">
+  <div class="row">
+    <div class="col">
+      16th April, 2021
+    </div>
+    <div class="col-6">
+    The o2 Arena, London
+    </div>
+    <div class="col">
+      <a href="https://www.ticketmaster.co.uk/" target="_blank" class="ticket">Ticket</a>
+    </div>
+  </div>
+</div>
+
+
+<div class="container">
+  <div class="row">
+    <div class="col">
+      17th April, 2021
+    </div>
+    <div class="col-6">
+    Barbican Centre, London
+    </div>
+    <div class="col">
+      <a href="https://www.ticketmaster.co.uk/" target="_blank" class="ticket">Ticket</a>
+    </div>
+  </div>  
+</div>
+
+
+
 
 
 
