--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
     <!-- <i> tags copied from fontawesome -->
 
    <ul>
-    <li><a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a></li>
-    <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook"></i></a></li>
-    <li><a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter"></i></a></li>
-    <li><a href="https://www.youtube.com" target="_blank"><i class="fab fa-youtube"></i></a></li>
     <li><a href="https://www.spotify.com/uk/" target="_blank"><i class="fab fa-spotify"></i></a></li>
+    <li><a href="https://www.youtube.com" target="_blank"><i class="fab fa-youtube"></i></a></li>
+    <li><a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a></li>
+    <li><a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter"></i></a></li>
+    <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook"></i></a></li>
    </ul>
 
 </nav>
@@ -84,11 +84,13 @@
 </div>
 </section>
 
+
 <!---------------------- Tour Section  ---------------------->
 
 <div class="tour">
 <h2>Tour dates</h2>
-<hr></div>
+
+<hr>
 
 <!-- Contained code copied from Bootstrap: https://getbootstrap.com/docs/4.0/layout/grid/ -->
 
@@ -98,7 +100,8 @@
       20th March, 2021
     </div>
     <div class="col-6">
-    Motorpoint Arena, Nottingham
+    Motorpoint Arena, 
+    Nottingham
     </div>
     <div class="col">
       <a href="https://www.ticketmaster.co.uk/" target="_blank" class="ticket">Ticket</a>
@@ -106,6 +109,7 @@
   </div>
 </div>
 
+<hr>
 
 <div class="container">
   <div class="row">
@@ -113,7 +117,8 @@
       27th March, 2021
     </div>
     <div class="col-6">
-    The Eden Project, Cornwall
+    The Eden Project, 
+    Cornwall
     </div>
     <div class="col">
       <a href="https://www.ticketmaster.co.uk/" target="_blank" class="ticket">Ticket</a>
@@ -121,13 +126,16 @@
    </div>
 </div>
 
+<hr>
+
 <div class="container">
   <div class="row">
     <div class="col">
       02nd April, 2021
     </div>
     <div class="col-6">
-    Concorde 2, Brighton
+    Concorde 2, 
+    Brighton
     </div>
     <div class="col">
       <a href="https://www.ticketmaster.co.uk/" target="_blank" class="ticket">Ticket</a>
@@ -135,6 +143,7 @@
   </div>    
 </div>
 
+<hr>
 
 <div class="container">
   <div class="row">
@@ -142,7 +151,8 @@
       16th April, 2021
     </div>
     <div class="col-6">
-    The o2 Arena, London
+    The o2 Arena, 
+    London
     </div>
     <div class="col">
       <a href="https://www.ticketmaster.co.uk/" target="_blank" class="ticket">Ticket</a>
@@ -150,6 +160,7 @@
   </div>
 </div>
 
+<hr>
 
 <div class="container">
   <div class="row">
@@ -157,13 +168,58 @@
       17th April, 2021
     </div>
     <div class="col-6">
-    Barbican Centre, London
+    Barbican Centre, 
+    London
     </div>
     <div class="col">
       <a href="https://www.ticketmaster.co.uk/" target="_blank" class="ticket">Ticket</a>
     </div>
   </div>  
 </div>
+
+<hr>
+
+<div class="container">
+  <div class="row">
+    <div class="col">
+      30th August, 2021
+    </div>
+    <div class="col-6">
+    Glastonbury Festival
+    </div>
+    <div class="col">
+      <a href="https://www.ticketmaster.co.uk/" target="_blank" class="ticket">Ticket</a>
+    </div>
+  </div>  
+</div>
+</div>
+
+<hr>
+
+<div class="container">
+  <div class="row">
+    <div class="col">
+      17th October, 2021
+    </div>
+    <div class="col-6">
+    The Cavern Club, 
+    Liverpool
+    </div>
+    <div class="col">
+      <a href="https://www.ticketmaster.co.uk/" target="_blank" class="ticket">Ticket</a>
+    </div>
+   </div>
+</div>
+
+<!-- End of copied code-->
+
+<!-- Gallery section-->
+
+<section class="News">
+
+<h2>News</h2>
+
+</section>
 
 
 
