--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Funk The Revolution</title>
+    
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous"> 
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
@@ -30,7 +31,7 @@
  (Excluding band name + social links)-->
 
 <div class="pos-f-t footer">
-  <nav class="navbar navbar-dark bg-dark">
+  <nav class="navbar fixed-top navbar-dark bg-dark">
     <button class="d-sm-none navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -102,132 +103,73 @@
 <div class="tour" id="section2">
 <h2>Tour dates</h2>
 
-<hr>
+<table>
+<tr>
+  <td>20th March, 2021</td>
+  <td>Motorpoint Arena, Nottingham</td>
+  <td><a href="https://www.ticketmaster.co.uk/" target="_blank" class="ticket">Ticket</a></td>
+</tr>
 
-<!-- Contained code copied from Bootstrap: https://getbootstrap.com/docs/4.0/layout/grid/ -->
+<tr>
+  <td>27th March, 2021</td>
+  <td>The Eden Project, Cornwall</td>
+  <td><a href="https://www.ticketmaster.co.uk/" target="_blank" class="ticket">Ticket</a></td>
+</tr>
 
-<div class="container">
-  <div class="row">
-    <div class="col">
-      20th March, 2021
-    </div>
-    <div class="col-6">
-    Motorpoint Arena, 
-    Nottingham
-    </div>
-    <div class="col">
-      <a href="https://www.ticketmaster.co.uk/" target="_blank" class="ticket">Ticket</a>
-    </div>
-  </div>
+<tr>
+  <td>02nd April, 2021</td>
+  <td>Concorde 2, Brighton</td>
+  <td><a href="https://www.ticketmaster.co.uk/" target="_blank" class="ticket">Ticket</a></td>
+</tr>
+
+<tr>
+  <td>16th April, 2021</td>
+  <td>The o2 Arena, London</td>
+  <td><a href="https://www.ticketmaster.co.uk/" target="_blank" class="ticket">Ticket</a></td>
+</tr>
+
+<tr>
+  <td>17th April, 2021</td>
+  <td>Barbican Centre, London</td>
+  <td><a href="https://www.ticketmaster.co.uk/" target="_blank" class="ticket">Ticket</a></td>
+</tr>
+
+<tr>
+  <td>30th August, 2021</td>
+  <td>Glastonbury Festival</td>
+  <td><a href="https://www.ticketmaster.co.uk/" target="_blank" class="ticket">Ticket</a></td>
+</tr>
+
+<tr>
+  <td>17th October, 2021</td>
+  <td>The Cavern Club, Liverpool</td>
+  <td><a href="https://www.ticketmaster.co.uk/" target="_blank" class="ticket">Ticket</a></td>
+</tr>
+
+<tr>
+  <td>11th December, 2021</td>
+  <td>The o2 Brixton, London</td>
+  <td><a href="https://www.ticketmaster.co.uk/" target="_blank" class="ticket">Ticket</a></td>
+</tr>
+
+</table>
 </div>
 
-<hr>
 
-<div class="container">
-  <div class="row">
-    <div class="col">
-      27th March, 2021
-    </div>
-    <div class="col-6">
-    The Eden Project, 
-    Cornwall
-    </div>
-    <div class="col">
-      <a href="https://www.ticketmaster.co.uk/" target="_blank" class="ticket">Ticket</a>
-    </div>
-   </div>
+
+<!---------- Gallery section ------------>
+
+<section>
+<h2>Gallery</h2>
+<div class="gallery-picture">
+<img src="">
+<img src="">
+<img src="">
+
 </div>
+</section>
 
-<hr>
-
-<div class="container">
-  <div class="row">
-    <div class="col">
-      02nd April, 2021
-    </div>
-    <div class="col-6">
-    Concorde 2, 
-    Brighton
-    </div>
-    <div class="col">
-      <a href="https://www.ticketmaster.co.uk/" target="_blank" class="ticket">Ticket</a>
-    </div>
-  </div>    
-</div>
-
-<hr>
-
-<div class="container">
-  <div class="row">
-    <div class="col">
-      16th April, 2021
-    </div>
-    <div class="col-6">
-    The o2 Arena, 
-    London
-    </div>
-    <div class="col">
-      <a href="https://www.ticketmaster.co.uk/" target="_blank" class="ticket">Ticket</a>
-    </div>
-  </div>
-</div>
-
-<hr>
-
-<div class="container">
-  <div class="row">
-    <div class="col">
-      17th April, 2021
-    </div>
-    <div class="col-6">
-    Barbican Centre, 
-    London
-    </div>
-    <div class="col">
-      <a href="https://www.ticketmaster.co.uk/" target="_blank" class="ticket">Ticket</a>
-    </div>
-  </div>  
-</div>
-
-<hr>
-
-<div class="container">
-  <div class="row">
-    <div class="col">
-      30th August, 2021
-    </div>
-    <div class="col-6">
-    Glastonbury Festival
-    </div>
-    <div class="col">
-      <a href="https://www.ticketmaster.co.uk/" target="_blank" class="ticket">Ticket</a>
-    </div>
-  </div>  
-</div>
-</div>
-
-<hr>
-
-<div class="container">
-  <div class="row">
-    <div class="col">
-      17th October, 2021
-    </div>
-    <div class="col-6">
-    The Cavern Club, 
-    Liverpool
-    </div>
-    <div class="col">
-      <a href="https://www.ticketmaster.co.uk/" target="_blank" class="ticket">Ticket</a>
-    </div>
-   </div>
-</div>
-
-<!-- End of copied code-->
-
-
-
-<!-- Gallery section-->
+<!---------- NEWS section---------->
 
 <section class="news" id="section3">
 <h2>News</h2>
