Fixed mobile version (so hero-image now appears)/ Added initial part of readme template to be amended / Tour section fixed to better fit screen on desktop and mobile version

--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
     <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook"></i></a></li>
    </ul>
 
+    <!-- End of copied code -->
+
 </nav>
   <div class="navi-links collapse" id="navbarToggleExternalContent">
     <div class="bg-dark p-4">
@@ -72,27 +74,20 @@
     </div>
   </div>
 </div>
-    <!-- End of copied code -->
-
-
-
-
 
 
 <!---------------------- QUOTES SECTION  ---------------------->
-<!---------------------- (potentially to be removed?)  
 
 <div id="quotes">
  <blockquote class="index-page-quotes">
-     <p><i class="fas fa-quote-left"></i>  
+     <p>  
      Went to see their gig at Went to see their gig at Went to see their gig at
      Went to see their gig atWent to see their gig atWent to see their gig at
       <i class="fas fa-quote-right"></i>
      </p>
  </blockquote>
  <footer>- Jim Jimson, September 2019</footer>
-</div>---------------------->
-
+</div>
 </div>
 </div>
 </section>
