Added new image under About-us section

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Funk The Revolution</title>
+    <title>The Revolution</title>
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous"> 
@@ -37,43 +37,41 @@
       <span class="navbar-toggler-icon"></span>
     </button>
 
-     <div class="navi-links collapse" id="navbarToggleExternalContent">
-     <div class="bg-dark p-4">
-    <ul class="navi-links">
+    <div class="navi-links collapse" id="navbarToggleExternalContent">
+    <div class="bg-dark p-4">
+      <ul class="navi-links">
         <li><a href="#section1">Home</a></li>
         <li><a href="#section2">Tour</a></li>
         <li><a href="#section3">News</a></li>
         <li><a href="#">Gallery</a></li>
       </ul>
     </div>
-  </div>
-<h4>The Revolution</h4>
+    </div>
+
+    <h4>The Revolution</h4>
 
     <div class="d-none d-md-block collapse">
     <div class="bg-dark p-4">
-    <ul class="navi-links">
+     <ul class="navi-links">
         <li><a href="#section1">Home</a></li>
         <li><a href="#section2">Tour</a></li>
         <li><a href="#section3">About us</a></li>
         <li><a href="#">Gallery</a></li>
       </ul>
     </div>
-  </div>
+    </div>
 
+<!-- <i> tags copied from fontawesome -->
 
-
-    <!-- <i> tags copied from fontawesome -->
-
-   <ul class="socials">
+ <ul class="socials">
     <li><a href="https://www.spotify.com/uk/" target="_blank"><i class="fab fa-spotify"></i></a></li>
     <li><a href="https://www.youtube.com" target="_blank"><i class="fab fa-youtube"></i></a></li>
     <li><a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a></li>
     <li><a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter"></i></a></li>
     <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook"></i></a></li>
-   </ul>
+ </ul>
 
     <!-- End of copied code -->
-
 </nav>
 </div>
 
@@ -162,10 +160,18 @@
 
 <section class="about-us" id="section3">
 
-
-<!---------- News section----------> 
-
 <h2>About us</h2>
+
+<img src="images/band-image-ecrop.jpg" alt="Band picture with crowd" class="band-img1">
+
+<div class="About-us-description">
+<p>We got together in early 2012 to form what is now The Revolution. From the start our goal was to bring people together
+through our music.</p>
+
+</div>
+
+<!---------- Sign up for news section----------> 
+
 <div class="news-div">
 <form class="email-subscription">
 <p>Subscribe below to receive the latest on band news, tours, and updates!</p>
@@ -176,6 +182,9 @@
 </form>
 </div>
 
+<!---------- End of News section ------------>
+
+
 
 </section>
 
@@ -184,7 +193,6 @@
 
 
 
-<!---------- End of News section ------------>
 
 
 
