Added text to 'About us' section

--- a/index.html
+++ b/index.html
@@ -162,13 +162,22 @@
 
 <h2>About us</h2>
 
-<img src="images/band-image-ecrop.jpg" alt="Band picture with crowd" class="band-img1">
+<div class="about-description">
+<p>In early 2019, a group of 5 strangers got together to form what is now The Revolution. Although their 
+backgrounds differed, from the start their goal was to bring people together through their music.</p>
 
-<div class="About-us-description">
-<p>We got together in early 2012 to form what is now The Revolution. From the start our goal was to bring people together
-through our music.</p>
+<p>The Revolution is made up of members who bring their own unique styles to provide music outside of 
+the usually constricted and defined genres.</p>
+
+<p>Making great stride, and having had the pleasures of working with the best of the best within the music 
+industry, The Revolution in being lined up for the five-day festival of contemporary performing arts that 
+takes place in Pilton, Somerset (2021) - otherwise known as Glastonbury Festival!
+</p>
 
 </div>
+
+<img src="images/band-image-ecrop.jpg" alt="Band picture with crowd" class="band-img1">
+
 
 <!---------- Sign up for news section----------> 
 
