Repositioned gallery sectionn/added 4 new images to gallery section

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <li><a href="#section1">Home</a></li>
         <li><a href="#section2">Tour</a></li>
         <li><a href="#section3">News</a></li>
-        <li><a href="#">Gallery</a></li>
+        <li><a href="#section4">Gallery</a></li>
       </ul>
     </div>
     </div>
@@ -162,6 +162,8 @@
 
 <h2>About us</h2>
 
+<img src="images/band-image-ecrop.jpg" alt="Band picture with crowd" class="band-img1">
+
 <div class="about-description">
 <p>In early 2019, a group of 5 strangers got together to form what is now The Revolution. Although their 
 backgrounds differed, from the start their goal was to bring people together through their music.</p>
@@ -175,12 +177,26 @@ takes place in Pilton, Somerset (2021) - otherwise known as Glastonbury Festival
 </p>
 
 </div>
+</section>
 
-<img src="images/band-image-ecrop.jpg" alt="Band picture with crowd" class="band-img1">
+<!---------- Gallery section ------------>
+
+<section class="gallery-header" id="section4">
+<h2>Gallery</h2>
+<div class="gallery-picture">
+<img src="images/unsplash.jpg">
+<img src="images/unsplash2.jpg">
+<img src="images/unsplash3.jpg">
+<img src="images/unsplash4.jpg">
+
+</div>
+</section>
+<!---------- end gallery section ---->
+
 
 
 <!---------- Sign up for news section----------> 
-
+<section>
 <div class="news-div">
 <form class="email-subscription">
 <p>Subscribe below to receive the latest on band news, tours, and updates!</p>
@@ -191,33 +207,11 @@ takes place in Pilton, Somerset (2021) - otherwise known as Glastonbury Festival
 </form>
 </div>
 
+</section>
+
 <!---------- End of News section ------------>
 
 
-
-</section>
-
-
-
-
-
-
-
-
-
-
-<!---------- Gallery section ------------>
-
-<section>
-<h2>Gallery</h2>
-<div class="gallery-picture">
-<img src="">
-<img src="">
-<img src="">
-
-</div>
-</section>
-<!---------- end gallery section ---->
 
 
 
