Added images to gallery section/added new footer with social links

--- a/index.html
+++ b/index.html
@@ -37,29 +37,31 @@
       <span class="navbar-toggler-icon"></span>
     </button>
 
-    <div class="navi-links collapse" id="navbarToggleExternalContent">
+    <div class="collapse" id="navbarToggleExternalContent">
     <div class="bg-dark p-4">
       <ul class="navi-links">
         <li><a href="#section1">Home</a></li>
         <li><a href="#section2">Tour</a></li>
-        <li><a href="#section3">News</a></li>
+        <li><a href="#section3">About-us</a></li>
         <li><a href="#section4">Gallery</a></li>
       </ul>
     </div>
     </div>
 
-    <h4>The Revolution</h4>
+
 
     <div class="d-none d-md-block collapse">
     <div class="bg-dark p-4">
      <ul class="navi-links">
         <li><a href="#section1">Home</a></li>
         <li><a href="#section2">Tour</a></li>
-        <li><a href="#section3">About us</a></li>
-        <li><a href="#">Gallery</a></li>
+        <li><a href="#section3">About-us</a></li>
+        <li><a href="#section4">Gallery</a></li>
       </ul>
     </div>
     </div>
+        <h4>The Revolution</h4>
+
 
 <!-- <i> tags copied from fontawesome -->
 
@@ -143,6 +145,12 @@
 </tr>
 
 <tr>
+  <td>10th December, 2021</td>
+  <td>The o2 Brixton, London</td>
+  <td><a href="https://www.ticketmaster.co.uk/" target="_blank" class="ticket">Ticket</a></td>
+</tr>
+
+<tr>
   <td>11th December, 2021</td>
   <td>The o2 Brixton, London</td>
   <td><a href="https://www.ticketmaster.co.uk/" target="_blank" class="ticket">Ticket</a></td>
@@ -161,7 +169,6 @@
 <section class="about-us" id="section3">
 
 <h2>About us</h2>
-
 <img src="images/band-image-ecrop.jpg" alt="Band picture with crowd" class="band-img1">
 
 <div class="about-description">
@@ -183,11 +190,17 @@ takes place in Pilton, Somerset (2021) - otherwise known as Glastonbury Festival
 
 <section class="gallery-header" id="section4">
 <h2>Gallery</h2>
+
 <div class="gallery-picture">
-<img src="images/unsplash.jpg">
-<img src="images/unsplash2.jpg">
-<img src="images/unsplash3.jpg">
-<img src="images/unsplash4.jpg">
+<img src="images/unsplash.jpg" alt="Band-performance" class="gal-image">
+<img src="images/unsplash2.jpg" alt="Fan-photo-band-performance" class="gal-image">
+<img src="images/unsplash3.jpg" alt="Fan-photo-band-performance-2" class="gal-image">
+<img src="images/unsplash4.jpg" alt="Band-behind-the-scene" class="gal-image">
+
+<img src="images/drummer-unsplash5.jpg" alt="Drummer-solo-picture" class="gal-image">
+<img src="images/XXX.jpg" alt="">
+<img src="images/XXX.jpg" alt="">
+<img src="images/XXX.jpg" alt="">
 
 </div>
 </section>
@@ -212,11 +225,31 @@ takes place in Pilton, Somerset (2021) - otherwise known as Glastonbury Festival
 <!---------- End of News section ------------>
 
 
+<!---------- Footer section----------> 
+
+<section class="footer" id="section5">
+<div class="end-page-footer">
+
+
+ <ul class="socials">
+    <li><a href="https://www.spotify.com/uk/" target="_blank"><i class="fab fa-spotify"></i></a></li>
+    <li><a href="https://www.youtube.com" target="_blank"><i class="fab fa-youtube"></i></a></li>
+    <li><a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a></li>
+    <li><a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter"></i></a></li>
+    <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook"></i></a></li>
+     <h6>Copyright &copy; The Revolution 2020</h6>
+
+ </ul>
+ 
+</div>
+
+
+</section>
 
 
 
-   <!--------------Bootstrap scripts -copied from 'Whiskey Drop' project
-    (originally from Bootstrap)   ---->
+
+<!--------------Bootstrap scripts -copied from 'Whiskey Drop' project (originally from Bootstrap)   ---->
 
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
