--- a/index.html
+++ b/index.html
@@ -172,22 +172,48 @@
 <img src="images/band-image-ecrop.jpg" alt="Band picture with crowd" class="band-img1">
 
 <div class="about-description">
-<p>In early 2019, a group of 5 strangers got together to form what is now The Revolution. Although their 
+<p>In early 2017, a group of 5 strangers got together to form what is now The Revolution. Although their 
 backgrounds differed, from the start their goal was to bring people together through their music.</p>
+
+<p>Their music influences have come from great bands such as The Red Hot Chili Peppers, and Linkin Park - 
+the former produced rock, funk, and punk rock music, and the latter usually categorized as alternative rock
+but throughout their career incorporating various other genres such as pop, hip hop, and electronica.</p>
 
 <p>The Revolution is made up of members who bring their own unique styles to provide music outside of 
 the usually constricted and defined genres.</p>
 
-<p>Making great stride, and having had the pleasures of working with the best of the best within the music 
-industry, The Revolution in being lined up for the five-day festival of contemporary performing arts that 
-takes place in Pilton, Somerset (2021) - otherwise known as Glastonbury Festival!
-</p>
+<p>The group made their entrance to the music industry with their hit record ‘Sun’ which remained on the 
+The Hot 100 BillBoards chart for a period of 7 weeks. Following this, they released their first album 
+‘Emerge’ in September 2017.</p>
 
+<p>The album was followed by various singles which contained a mixture of each members’ different style 
+bringing in music lovers from a variety of genres.</p>
+
+<p>Making great stride, and having had the pleasures of working with the best of the best within the music 
+industry, The Revolution in being lined up for the five-day festival of contemporary performing arts that takes 
+place in Pilton, Somerset (2021) - otherwise known as Glastonbury Festival!</p>
 </div>
 </section>
 
-<!---------- Gallery section ------------>
+<!---------- Sign up for news section----------> 
+<section>
+<div class="news-div">
+<form class="email-subscription">
+<p>Subscribe below to receive the latest on band news, tours, and updates!</p>
+<label for="email"></label>
+<input type="email" placeholder="Email Address" required>
+<!-- class for button copied in from bootstrap-->
+<button class="btn btn-dark">Subscribe</button> 
+</form>
+</div>
 
+</section>
+
+<!---------- End of News section ------------>
+
+
+<!---------- Gallery section ------------>
+<hr>
 <section class="gallery-header" id="section4">
 <h2>Gallery</h2>
 
@@ -206,23 +232,6 @@ takes place in Pilton, Somerset (2021) - otherwise known as Glastonbury Festival
 </section>
 <!---------- end gallery section ---->
 
-
-
-<!---------- Sign up for news section----------> 
-<section>
-<div class="news-div">
-<form class="email-subscription">
-<p>Subscribe below to receive the latest on band news, tours, and updates!</p>
-<label for="email"></label>
-<input type="email" placeholder="Email Address" required>
-<!-- class for button copied in from bootstrap-->
-<button class="btn btn-dark">Subscribe</button> 
-</form>
-</div>
-
-</section>
-
-<!---------- End of News section ------------>
 
 
 <!---------- Footer section----------> 
