Added quote to section1(hero-image)/Styled quote to have left border/centered youtube video in 'about-us' section

--- a/index.html
+++ b/index.html
@@ -48,8 +48,6 @@
     </div>
     </div>
 
-
-
     <div class="d-none d-md-block collapse">
     <div class="bg-dark p-4">
      <ul class="navi-links">
@@ -59,7 +57,7 @@
         <li><a href="#section4">Gallery</a></li>
       </ul>
     </div>
-    </div>
+    </div> 
         <h4>The Revolution</h4>
 
 
@@ -82,13 +80,12 @@
 
 <div id="quotes">
  <blockquote class="index-page-quotes">
-     <p>  
-     Went to see their gig at Went to see their gig at Went to see their gig at
-     Went to see their gig atWent to see their gig atWent to see their gig at
-      <i class="fas fa-quote-right"></i>
+     <p> <i class="fas fa-quote-left"></i>
+     The Revolution have practically come out of nowhere and taken the world by storm!
+     Their show tonight has been phenomenal and I can't wait to see what else they have in store.
      </p>
+      <footer>Tim Frida - Warner Music Group, 2019</footer>
  </blockquote>
- <footer>- Jim Jimson, September 2019</footer>
 </div>
 </div>
 </div>
@@ -193,6 +190,11 @@ bringing in music lovers from a variety of genres.</p>
 industry, The Revolution in being lined up for the five-day festival of contemporary performing arts that takes 
 place in Pilton, Somerset (2021) - otherwise known as Glastonbury Festival!</p>
 </div>
+
+<iframe width="450" height="315" src="https://www.youtube.com/embed/mrJikvqZ9IQ" 
+frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
+></iframe>
+
 </section>
 
 <!---------- Sign up for news section----------> 
