--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous"> 
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Lato&family=Roboto&display=swap" rel="stylesheet">
+
     <script src="https://kit.fontawesome.com/538794ec36.js" crossorigin="anonymous"></script>
 
     
@@ -19,61 +20,44 @@
 
 <body>
 
-<!---------------------- HEADER + HERO IMAGE  ---------------------->
+<!---------------------- HEADER + NAVIGATION + HERO IMAGE DIV ---------------------->
 
-<section class="header hero-image-container">
+<section class="hero-image-container">
 
-<div class="navigation-bar">
-
-<div class="hero-image" id="section1">
+<div class="navigation-bar" id="section1">
 
 <!-- Navbar code below copied from Bootstrap - https://getbootstrap.com/docs/4.0/components/navbar/ 
  (Excluding band name + social links)-->
 
 
-<div class="pos-f-t header">
-  <nav class="navbar fixed-top navbar-dark bg-dark">
-    <button class="d-sm-none navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
+  <div class="navbar-brand" href="#">The Revolution</div>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
+        <li class="nav-item"><a class="nav-link" href="#section1">Home</a></li>
+        <li class="nav-item"><a class="nav-link" href="#section2">Tour</a></li>
+        <li class="nav-item"><a class="nav-link" href="#section3">About-us</a></li>
+        <li class="nav-item"><a class="nav-link" href="#section4">Gallery</a></li>
+    </ul>
+  </div>
 
-    <div class="collapse" id="navbarToggleExternalContent">
-    <div class="bg-dark p-4">
-      <ul class="navi-links">
-        <li><a href="#section1">Home</a></li>
-        <li><a href="#section2">Tour</a></li>
-        <li><a href="#section3">About-us</a></li>
-        <li><a href="#section4">Gallery</a></li>
-      </ul>
-    </div>
-    </div>
-
-    <div class="d-none d-md-block collapse">
-    <div class="bg-dark p-4">
-     <ul class="navi-links">
-        <li><a href="#section1">Home</a></li>
-        <li><a href="#section2">Tour</a></li>
-        <li><a href="#section3">About-us</a></li>
-        <li><a href="#section4">Gallery</a></li>
-      </ul>
-    </div>
-    </div> 
-        <h4>The Revolution</h4>
-
-
-<!-- <i> tags copied from fontawesome -->
-
- <ul class="socials">
+  <!-- <i> tags copied from fontawesome -->
+  <ul class="socials">
     <li><a href="https://www.spotify.com/uk/" target="_blank"><i class="fab fa-spotify"></i></a></li>
     <li><a href="https://www.youtube.com" target="_blank"><i class="fab fa-youtube"></i></a></li>
     <li><a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a></li>
     <li><a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter"></i></a></li>
     <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook"></i></a></li>
- </ul>
+ </ul> 
+</nav>
 
     <!-- End of copied code -->
-</nav>
-</div>
+
+
+<div class="hero-image">
 
 
 <!---------------------- QUOTES SECTION  ---------------------->
@@ -81,8 +65,8 @@
 <div id="quotes">
  <blockquote class="index-page-quotes">
      <p> <i class="fas fa-quote-left"></i>
-     The Revolution have practically come out of nowhere and taken the world by storm!
-     Their show tonight has been phenomenal and I can't wait to see what else they have in store.
+     The Revolution have practically come out of nowhere and taken the world by storm.
+     Their show tonight has been phenomenal and I can't wait to see what else they have in store!
      </p>
       <footer>Tim Frida - Warner Music Group, 2019</footer>
  </blockquote>
@@ -215,7 +199,7 @@ frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; pict
 
 
 <!---------- Gallery section ------------>
-<hr>
+
 <section class="gallery-header" id="section4">
 <h2>Gallery</h2>
 
