Added text to README.md file

--- a/index.html
+++ b/index.html
@@ -26,9 +26,8 @@
 
 <div class="navigation-bar" id="section1">
 
-<!-- Navbar code below copied from Bootstrap - https://getbootstrap.com/docs/4.0/components/navbar/ 
- (Excluding band name + social links)-->
-
+<!-- Navbar code below copied from Bootstrap - https://getbootstrap.com/docs/4.2/components/navbar/ 
+ (Excluding social links)-->
 
 <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
   <div class="navbar-brand" href="#">The Revolution</div>
