Added more information to 'Existing features' and 'Technologies used' sections of the readme file

--- a/index.html
+++ b/index.html
@@ -162,19 +162,23 @@ but throughout their career incorporating various other genres such as pop, hip 
 <p>The Revolution is made up of members who bring their own unique styles to provide music outside of 
 the usually constricted and defined genres.</p>
 
-<p>The group made their entrance to the music industry with their hit record ‘Sun’ which remained on the 
-The Hot 100 BillBoards chart for a period of 7 weeks. Following this, they released their first album 
-‘Emerge’ in September 2017.</p>
+<p>The group made their entrance to the music industry with their hit record <a class="music" href="https://open.spotify.com/track/602QT8hTuTVA4aSQWR13LB" target="_blank">'Sun'</a> 
+which remained on the The Hot 100 BillBoards chart for a period of 7 weeks. Following this, they released their first album 
+<a class="music" href="https://open.spotify.com/album/1TU4tAlNzFbd1yw7FxI0Sn">‘Emerge’</a> in September 2017.</p>
 
 <p>The album was followed by various singles which contained a mixture of each members’ different style 
-bringing in music lovers from a variety of genres.</p>
+bringing in music lovers from a variety of genres, and always aimed to not be defined by any specific set of rules.</p>
+
+<p>In similar fashion to those they looked up to, whilst having a set style, The Revolution work with, and produce 
+music from different genres (Rock, Hip Hop, Pop - to name a few). This can be seen in their most recent album released
+only in Novemeber 2019 - <a class="music" href="https://open.spotify.com/album/1TU4tAlNzFbd1yw7FxI0Sn">'Prophecy'</a>.</p>
 
 <p>Making great stride, and having had the pleasures of working with the best of the best within the music 
 industry, The Revolution in being lined up for the five-day festival of contemporary performing arts that takes 
 place in Pilton, Somerset (2021) - otherwise known as Glastonbury Festival!</p>
 </div>
 
-<iframe width="450" height="315" src="https://www.youtube.com/embed/mrJikvqZ9IQ" 
+<iframe width="450" height="315" src="https://www.youtube.com/embed/b99r48grKGI" 
 frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
 ></iframe>
 
